tests/rosetta/transpiler/Clojure/ftp.error
run error: exit status 1
Connected to localhost:21
Logged in as anonymous
pub
Execution error (ClassCastException) at main/list (ftp.clj:35).
class java.lang.String cannot be cast to class java.lang.Number (java.lang.String and java.lang.Number are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-12474299838059673361.edn
